Changes in 3.1.2 :
- Improved performance of GUI updates
- Make sure app icon is set (mostly for windows)
- Fix crash when clicking on clear search history button twice (167580)
- Backported some improvements to download thread 
- Make sure cookies are not sent in http announces
- Fix crash at startup which started happening since KDE 4.1
- Fix problem causing massive memory usage (148385)

Changes in 3.1.1 :
- Fix wrong icon name in PeerView for encrypted peers 
- If speed is very low, don't show speed in PeerView
- Fix crash when double clicking on directories in fileview (164434)
- Added GroupFilterModel to filter out torrents, this avoids a bug in Qt which
caused hidden torrents to be shown when a view was sorted by a column.
(164113)
- Make sure port is 80 if it is not specified in device url in upnp library
- Fix Preview in right click menu of View (164503)
- Fix bug in network preferences causing the chosen network interface not to
be selected
- Fix border chunk priority being set wrongly in some rare cases (165587)
- Don't stop connecting with webseed after 3 failed attempts but keep going on
with a longer interval (2 minutes)

Changes in 3.1 :
- Use KIO::storedGet to download XML description of UPnP router
- Use KIO::mkdir in MakeDir function
- Make sure that path creation on windows works when creating the necessary paths for a torrents' files
- Fix bug in mediaplayer causing wrong file to be played in some case

Changes in 3.1rc1 :
- Make sure that when keep seeding is on and a torrent is stopped because it has finished downloading, the torrent is not restarted the next time you startup KT
- Clean up stuff is move of data files is canceled (157657)
- Fix recursive infinite loop in QM
- Items on the bandwidth schedule can now be moved around using the mouse
- Items on the bandwidth schedule can now be resized using the mouse
- Show guidance lines when items on schedule are moved or resized
- Colors of the bandwidth scheduler can now be configured